--- a/style.css
+++ b/style.css
@@ -63,6 +63,12 @@ body{
     border-bottom: 4px solid var(--verde);
 }
 
+.abas-textos{
+    background-color: var(--texto-de-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
+
 @media screen and (min-width: 768px) {
     .botoes{
         display: flex;
